--- a/public/css/style.css
+++ b/public/css/style.css
@@ -219,11 +219,14 @@ body::-webkit-scrollbar {
 
 .result-container {
     width: 234px; 
+    min-height: auto;
     max-height: 500px;
+    width: 360px;
     border: 2px #5FCEF5 solid;
     background-color: #2D2F30;
     display: none;
     overflow-y: scroll;
+    transform: translate(-5%, -6%);
 }
 
 .result-container::-webkit-scrollbar {
@@ -248,6 +251,31 @@ body::-webkit-scrollbar {
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+    background-color: #B9E9FA;
+    -webkit-box-shadow: 0 0 0px 1000px #B9E9FA inset;
+    transition: background-color  0s ease-in-out 0s;
+}
+
+.search_button {
+    background: #5FCEF5;
+    border: 3px solid #5FCEF5;
+}
+
+.search_button:hover {
+    background: #5FCEF5;
+    border: 3px solid #5FCEF5;
+    color: white;
 }
 
 .navbar {
@@ -456,8 +484,8 @@ button.close {
     display: block;
     z-index: 1;
     position: absolute;
-    top: 35%;
-    left: 30%;
+    top: 30%;
+    left: 40%;
 }
 @keyframes spin {
     from {
